<resources>

    <string name="app_name">cloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="baojie">保洁</string>
    <string name="me">我</string>
    <string name="order">订单</string>
    <string name="firstpage">首页</string>
    <string name="yuesao">月嫂</string>
    <string name="oldman">看护老人</string>
    <string name="yuer">育儿嫂</string>
    <string name="baomu">保姆</string>
    <string name="zhongdiangong">钟点工</string>
    <string name="detail">>>>详情</string>
    <string name="topword">云家政</string>
    <string name="topword1">我的订单</string>
    <string name="topwordme">我的信息</string>
    <string name="exist">退出</string>
    <string name="servers">客服</string>
    <string name="mianji">房屋面积</string>
    <string name="mianjidaxiao">请选择面积</string>

    <string-array name="stringArray">
        <item>上海</item>
        <item>西安</item>
        <item>北京</item>
        <item>深圳</item>
        <item>青岛</item>
    </string-array>

    <string name="zuofan">做饭</string>
    <string name="pinglv">服务频率</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="datestart">开始时间</string>
    <string name="dateend">结束时间</string>
    <string name="jiaweijiage">请选择价格</string>
    <string name="jiawei">心理价位</string>
    <string name="petis">是否有宠物</string>
    <string name="cat">猫</string>
    <string name="smalldog">小型犬</string>
    <string name="bigdog">大型犬</string>
    <string name="other">其他需求</string>
    <string name="address">输入服务地址</string>
    <string name="lianxiren">请输入联系人</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="otherdetail">输入其他需求（选填）</string>
    <string name="serversdetail">服务内容</string>
    <string name="textdatestart">点击输入开始日期</string>
    <string name="textdateend">点击输入结束日期</string>
    <string name="wenxintishi">温馨提示：阿姨面试成功后会有云家政服务门店按市场价收取中介费</string>
    <string name="ok">发起预约</string>
    <string name="back">&lt;</string>
    <string name="kouwei">烧饭口味</string>
    <string name="dan">偏淡</string>
    <string name="xian">偏咸</string>
    <string name="la">偏辣</string>
    <string name="qingdan">清淡</string>
    <string name="mianshi">面食</string>
    <string name="action_settings">TODO</string>
    <string name="cancel">取消</string>
    <string name="affirm">确认</string>
    <string name="otherneed">其他需求</string>
    <string name="otherneedtishi">请简单描述您遇到的问题</string>
    <string name="BACK">X</string>
    <string name="FUWUNEIRONG">固定时间上门提供家政服务，主要包括：打扫卫生，熨烫衣服，买菜做饭，辅助照顾小孩老人等</string>
    <string name="fuwuneirongxiao">服务内容</string>
    <string name="zhujiabaomu">住家保姆</string>
    <string name="boy">男宝宝</string>
    <string name="girl">女宝宝</string>
    <string name="boyage">宝宝年龄</string>
    <string name="choiceage">请选择年龄</string>
    <string name="zhujia">住家</string>
    <string name="buzhujia">不住家</string>
    <string name="yuersao">育儿嫂</string>
    <string name="selfno">不能自理</string>
    <string name="halfself">半自理</string>
    <string name="self">自理</string>
    <string name="man">男老人</string>
    <string name="woman">女老人</string>
    <string name="deliverdate">预产期</string>
    <string name="chilcedeliverdate">请选择预产期</string>
    <string name="singleprice">单价</string>
    <string name="pricenumbei">25元/小时</string>
    <string name="queding">确定</string>
    <string name="gotime">上门时间</string>
    <string name="gotimechioce">请选择上门时间</string>
    <string name="price">50元</string>
    <string name="zojia">总价</string>
    <string name="choicetime">选择服务时长</string>
    <string name="twohour">两小时</string>
    <string name="threehour">三小时</string>
    <string name="fourhour">四小时</string>
    <string name="yuersaofuwu">育儿嫂的服务</string>
    <string name="x">X</string>
    <string name="content">服务内容</string>
    <string name="yuesaodefuwu">月嫂的服务</string>
    <string name="zhongdiangongfuwu">固定时间上门提供家政服务，主要包括：打扫卫生，熨烫衣服，买菜做饭，辅助照顾小孩老人等</string>
    <string name="laorenfuwu">老人的服务</string>
    <string name="baomufuwu">保姆的服务</string>
    <string name="baojiefuwu">保洁的服务</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="select">选中</string>
    <string name="addnewaddress">点击添加新地址</string>
    <string name="selectaddress">请选择地址</string>
    <string name="xiugai">修改</string>
    <string name="new111">刷新</string>
    <string name="orderdetail">订单详情</string>
    <string name="backto">返回</string>

</resources>