<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/btn_baojie_serverscon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:background="#B3EE3A"
        android:gravity="center"
        android:text="@string/content"
        android:textColor="#030303"
        android:textSize="16pt" />

    <TextView
        android:id="@+id/btn_baojie_serverscon1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#B3EE3A"
        android:gravity="center"
        android:text="@string/baojiefuwu"
 android:textColor="#030303"
        android:textSize="12pt" />

    <Button
        android:id="@+id/btn_baojie_sercancel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#B3EE3A"
         android:textColor="#030303"
         android:textSize="12pt"
        android:text="@string/x" />

</LinearLayout>